fix cards overflowing the page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -262,6 +262,7 @@ p {
         display: grid;
         grid-template-columns: 1fr;
         gap: 20px;
+        overflow: hidden;
 
         @include tablet {
             grid-template-columns: repeat(2,1fr);
